--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,38 @@ apply plugin: "jacoco"  //Jacoco 插件
 
 sourceCompatibility = 1.8
 
+tasks.withType(JavaCompile) {
+    options.encoding = "gbk"
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+jacocoTestReport {
+    reports {
+        html.enabled true
+        csv.enabled false
+        xml.enabled true
+        xml.destination file("$buildDir/jacocoXml.xml")
+        html.destination file("$buildDir/jacocoHtml")
+    }
+    afterEvaluate {
+//        getClassDirectories().setFrom(
+//                classDirectories.files.collect {
+//                    fileTree(dir: it,
+//                            exclude: ['需要排除的路径, it路径是classes'])
+//                }
+//        )
+    }
+}
+test {
+    jacoco {
+        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+        classDumpDir = file("$buildDir/jacoco/classpathdumps")
+    }
 }
